[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
ethers={version  ="2.0.11",features = ["abigen","rustls","etherscan"], default-features = false}
web3_dater = "0.1.1"
chrono = "0.4.22"
web3 = {version="0.18.0",default-features = false,features = ["_http_base","async-native-tls","base64","bytes","headers","http","http-tls","ipc-tokio","once_cell","secp256k1"]}
# colored = "2.0.4"
dotenv = "0.15.0"
actix-cors = "0.6.5"
